--- a/index.html
+++ b/index.html
@@ -1,222 +1,206 @@
 <html>
 
 <head>
-<title>WEBGL</title>
-<meta http-equiv="content-type" content="text/html; charset=utf8">
-<link href="css/smoothness/jquery-ui-1.8.13.custom.css" type="text/css" rel="stylesheet"/>
-<script type="text/javascript" src="js/gl/glMatrix-0.9.5.min.js"></script>
-<script type="text/javascript" src="js/gl/webgl-utils.js"></script>
-<script type="text/javascript" src="js/gl/webgl-debug.js"></script>
-<script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
-<script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
-<script type="text/javascript">
+    <title>WEBGL</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf8">
+    <link href="css/smoothness/jquery-ui-1.8.13.custom.css" type="text/css" rel="stylesheet"/>
 
 
-    var gl;
-    var shaderProgram;
-    var particleProgram;
-    var currentlyPressedKeys = {};
-    var game;
-    var screenWidth = 110; //worldcoordinates
-    var screenHeight = 65; //worldcoordinates
-
-    function printDebug(msg) {
-        $('#debugarea').html(msg);
-    }
+    <script type="text/javascript" src="js/gl/glMatrix-0.9.5.min.js"></script>
 
 
-</script>
+    <script type="text/javascript">
 
-<script type="text/javascript" src="js/Texture.js"></script>
-<script type="text/javascript" src="js/Model.js"></script>
-<script type="text/javascript" src="js/Asteroids.js"></script>
-<script type="text/javascript" src="js/Asteroid.js"></script>
-<script type="text/javascript" src="js/Bullet.js"></script>
-<script type="text/javascript" src="js/Gun.js"></script>
-<script type="text/javascript" src="js/Ship.js"></script>
-<script type="text/javascript" src="js/Game.js"></script>
-<script type="text/javascript" src="js/ActionMapper.js"></script>
+        var gl;
+        var shaderProgram;
+        var particleProgram;
+        var currentlyPressedKeys = {};
+        var game;
+        var screenWidth = 110; //worldcoordinates
+        var screenHeight = 65; //worldcoordinates
 
-
-<script type="text/javascript">
-
-
-
-    function initParticleShaders(id) {
-
-
-        var program = gl.createProgram();
-
-        getShader(id,program);
-
-        gl.linkProgram(program);
-
-
-        if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-            alert("Could not initialise shaders");
+        function printDebug(msg) {
+            $('#debugarea').html(msg);
         }
 
-        //gl.useProgram(shaderProgram);
+        function initParticleShaders(id) {
 
-        program.pointLifetimeAttribute = gl.getAttribLocation(program, "aLifetime");
-        gl.enableVertexAttribArray(program.pointLifetimeAttribute);
+            var program = gl.createProgram();
 
-        program.pointStartPositionAttribute = gl.getAttribLocation(program, "aStartPosition");
-        gl.enableVertexAttribArray(program.pointStartPositionAttribute);
+            getShader(id, program);
 
-        program.pointEndPositionAttribute = gl.getAttribLocation(program, "aEndPosition");
-        gl.enableVertexAttribArray(program.pointEndPositionAttribute);
+            gl.linkProgram(program);
 
-        program.samplerUniform = gl.getUniformLocation(program, "sTexture");
-        program.centerPositionUniform = gl.getUniformLocation(program, "uCenterPosition");
-        program.colorUniform = gl.getUniformLocation(program, "uColor");
-        program.timeUniform = gl.getUniformLocation(program, "uTime");
+            if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+                alert("Could not initialise shaders");
+            }
 
+            program.pointLifetimeAttribute = gl.getAttribLocation(program, "aLifetime");
+            gl.enableVertexAttribArray(program.pointLifetimeAttribute);
 
-        return program;
+            program.pointStartPositionAttribute = gl.getAttribLocation(program, "aStartPosition");
+            gl.enableVertexAttribArray(program.pointStartPositionAttribute);
 
-    }
+            program.pointEndPositionAttribute = gl.getAttribLocation(program, "aEndPosition");
+            gl.enableVertexAttribArray(program.pointEndPositionAttribute);
 
-    function initShaders(id) {
-
-        var program = gl.createProgram();
-
-
-        getShader(id,program);
+            program.samplerUniform = gl.getUniformLocation(program, "sTexture");
+            program.centerPositionUniform = gl.getUniformLocation(program, "uCenterPosition");
+            program.colorUniform = gl.getUniformLocation(program, "uColor");
+            program.timeUniform = gl.getUniformLocation(program, "uTime");
 
 
+            return program;
 
-
-        gl.linkProgram(program);
-
-        if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-            alert("Could not initialise shaders");
         }
 
-        //gl.useProgram(program);
+        function initShaders(id) {
 
-        program.aVertexPosition = gl.getAttribLocation(program, "aVertexPosition");
-        gl.enableVertexAttribArray(program.aVertexPosition);
+            var program = gl.createProgram();
 
-        program.textureCoordAttribute = gl.getAttribLocation(program, "aTextureCoord");
-        gl.enableVertexAttribArray(program.textureCoordAttribute);
+            getShader(id, program);
 
-        program.aVertexNormal = gl.getAttribLocation(program, "aVertexNormal");
-        gl.enableVertexAttribArray(program.aVertexNormal);
+            gl.linkProgram(program);
 
+            if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+                alert("Could not initialise shaders");
+            }
 
-        program.uPMatrix = gl.getUniformLocation(program, "uPMatrix");
-        program.uMVMatrix = gl.getUniformLocation(program, "uMVMatrix");
-        program.uNMatrix = gl.getUniformLocation(program, "uNMatrix");
-        program.samplerUniform = gl.getUniformLocation(program, "uSampler");
+            program.aVertexPosition = gl.getAttribLocation(program, "aVertexPosition");
+            gl.enableVertexAttribArray(program.aVertexPosition);
 
-        program.uMaterialShininess = gl.getUniformLocation(program, "uMaterialShininess");
-        program.uAmbient = gl.getUniformLocation(program, "uAmbient");
-        //shaderProgram.uMaterialDiffuse = gl.getUniformLocation(shaderProgram, "uMaterialDiffuse");
-        //shaderProgram.uMaterialSpecular = gl.getUniformLocation(shaderProgram, "uMaterialSpecular");
+            program.textureCoordAttribute = gl.getAttribLocation(program, "aTextureCoord");
+            gl.enableVertexAttribArray(program.textureCoordAttribute);
 
-
-        program.uLightPosition = gl.getUniformLocation(program, "uLightPosition");
-        program.uLightAmbient = gl.getUniformLocation(program, "uLightAmbient");
-        program.uLightDiffuse = gl.getUniformLocation(program, "uLightDiffuse");
-        program.uLightSpecular = gl.getUniformLocation(program, "uLightSpecular");
+            program.aVertexNormal = gl.getAttribLocation(program, "aVertexNormal");
+            gl.enableVertexAttribArray(program.aVertexNormal);
 
 
-        program.alphaUniform = gl.getUniformLocation(program, "uAlpha");
-        program.useLightingUniform = gl.getUniformLocation(program, "uUseLighting");
-        return program;
+            program.uPMatrix = gl.getUniformLocation(program, "uPMatrix");
+            program.uMVMatrix = gl.getUniformLocation(program, "uMVMatrix");
+            program.uNMatrix = gl.getUniformLocation(program, "uNMatrix");
+            program.samplerUniform = gl.getUniformLocation(program, "uSampler");
 
-    }
+            program.uMaterialShininess = gl.getUniformLocation(program, "uMaterialShininess");
+            program.uAmbient = gl.getUniformLocation(program, "uAmbient");
+            //shaderProgram.uMaterialDiffuse = gl.getUniformLocation(shaderProgram, "uMaterialDiffuse");
+            //shaderProgram.uMaterialSpecular = gl.getUniformLocation(shaderProgram, "uMaterialSpecular");
 
-    function getShader(id,program) {
+
+            program.uLightPosition = gl.getUniformLocation(program, "uLightPosition");
+            program.uLightAmbient = gl.getUniformLocation(program, "uLightAmbient");
+            program.uLightDiffuse = gl.getUniformLocation(program, "uLightDiffuse");
+            program.uLightSpecular = gl.getUniformLocation(program, "uLightSpecular");
 
 
+            program.alphaUniform = gl.getUniformLocation(program, "uAlpha");
+            program.useLightingUniform = gl.getUniformLocation(program, "uUseLighting");
+            return program;
 
-        var vs_source = null, fs_source = null;
-        $.ajax({
-            async: false,
-            url: './shaders/' + id + '-vs.shader',
-            success: function (data) {
-
-                vs_source = data;
-            },
-            dataType: 'html'
-        });
-
-        $.ajax({
-            async: false,
-            url: './shaders/' + id + '-fs.shader',
-            success: function (data) {
-
-                fs_source = data;
-            },
-            dataType: 'html'
-        });
-        var vsshader;
-        var fsshader;
-
-        fsshader = gl.createShader(gl.FRAGMENT_SHADER);
-        gl.shaderSource(fsshader, fs_source);
-        gl.compileShader(fsshader);
-        if (!gl.getShaderParameter(fsshader, gl.COMPILE_STATUS)) {
-            alert(gl.getShaderInfoLog(fsshader));
-            return null;
         }
 
-        vsshader = gl.createShader(gl.VERTEX_SHADER);
-        gl.shaderSource(vsshader, vs_source);
-        gl.compileShader(vsshader);
-        if (!gl.getShaderParameter(vsshader, gl.COMPILE_STATUS)) {
-            alert(gl.getShaderInfoLog(vsshader));
-            return null;
+        function getShader(id, program) {
+
+
+            var vs_source = null, fs_source = null;
+            $.ajax({
+                async: false,
+                url: './shaders/' + id + '-vs.shader',
+                success: function (data) {
+
+                    vs_source = data;
+                },
+                dataType: 'html'
+            });
+
+            $.ajax({
+                async: false,
+                url: './shaders/' + id + '-fs.shader',
+                success: function (data) {
+
+                    fs_source = data;
+                },
+                dataType: 'html'
+            });
+            var vsshader;
+            var fsshader;
+
+            fsshader = gl.createShader(gl.FRAGMENT_SHADER);
+            gl.shaderSource(fsshader, fs_source);
+            gl.compileShader(fsshader);
+            if (!gl.getShaderParameter(fsshader, gl.COMPILE_STATUS)) {
+                alert(gl.getShaderInfoLog(fsshader));
+                return null;
+            }
+
+            vsshader = gl.createShader(gl.VERTEX_SHADER);
+            gl.shaderSource(vsshader, vs_source);
+            gl.compileShader(vsshader);
+            if (!gl.getShaderParameter(vsshader, gl.COMPILE_STATUS)) {
+                alert(gl.getShaderInfoLog(vsshader));
+                return null;
+            }
+
+            gl.attachShader(program, vsshader);
+            gl.attachShader(program, fsshader);
+
         }
 
-        gl.attachShader(program, vsshader);
-        gl.attachShader(program, fsshader);
+        function logGLCall(functionName, args) {
+            console.log("gl." + functionName + "(" +
+                    WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
+        }
+
+        function webGLStart() {
+
+            var canvas = document.getElementById("canvas");
+
+            game = new Game("ship");
+            game.init(canvas);
+            document.onkeydown = game.actionMapper.handleKeyDown;
+            document.onkeyup = game.actionMapper.handleKeyUp;
+
+        }
+
+
+    </script>
+
+
+    <script type="text/javascript" src="js/Particle.js"></script>
+    <script type="text/javascript" src="js/Particles.js"></script>
+    <script type="text/javascript" src="js/gl/webgl-utils.js"></script>
+    <script type="text/javascript" src="js/gl/webgl-debug.js"></script>
+    <script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
+    <script type="text/javascript" src="js/Texture.js"></script>
+    <script type="text/javascript" src="js/Model.js"></script>
+    <script type="text/javascript" src="js/Asteroids.js"></script>
+    <script type="text/javascript" src="js/Asteroid.js"></script>
+    <script type="text/javascript" src="js/Bullet.js"></script>
+    <script type="text/javascript" src="js/Gun.js"></script>
+    <script type="text/javascript" src="js/Ship.js"></script>
+    <script type="text/javascript" src="js/Game.js"></script>
+    <script type="text/javascript" src="js/ActionMapper.js"></script>
 
 
 
 
 
 
-    }
 
-
-    function logGLCall(functionName, args) {
-        console.log("gl." + functionName + "(" +
-                WebGLDebugUtils.glFunctionArgsToString(functionName, args) + ")");
-    }
-
-
-    function webGLStart() {
-        var canvas = document.getElementById("canvas");
-        //
-
-        game = new Game(gl, 'asteroid');
-        game.init(canvas);
-        document.onkeydown = game.actionMapper.handleKeyDown;
-        document.onkeyup = game.actionMapper.handleKeyUp;
-
-    }
-
-
-</script>
-
-<style type="text/css">
-    #loadingtext {
-        position: absolute;
-        top: 250px;
-        left: 150px;
-        font-size: 2em;
-        color: white;
-    }
-</style>
+    <style type="text/css">
+        #loadingtext {
+            position: absolute;
+            top: 250px;
+            left: 150px;
+            font-size: 2em;
+            color: white;
+        }
+    </style>
 </head>
 <body onload="webGLStart();">
 
-
 <canvas id="canvas" style="border: none;" width="1280" height="720"></canvas>
-
 
 <div id="bottom">
     <table style="padding=0px">
@@ -242,7 +226,6 @@
             </td>
         </tr>
     </table>
-
 </div>
 <div id="debugarea"></div>
 <script>
